# ECE666

./: .gitignore  CMakeLists.txt
Homework1/: CMakeLists.txt  homework1.c  hw1-mm.c  hw1-sort.c  main.c
Homework2/: CMakeLists.txt  Makefile  main.c  mpi_matrixmul.c  mpi_quicksort.c
Homework2/MatrixMul/: CMakeLists.txt  Makefile  machinefile  mpi_matrixmul.c
Homework2/QuickSort/: CMakeLists.txt  Makefile  mpi_quicksort.c
Homework2/Sort/: CMakeLists.txt  main.c  mpi_bubblesort.c  mpi_sort.c
Homework3/fs_out/: config.ini  config.json  fullsystem.txt  system.pc.com_1.device
Homework3/html/: DMA_table.html  DMA_table_BUSY_RD.html  DMA_table_BUSY_WR.html  DMA_table_READY.html  Directory_table.html  Directory_table_I.html  Directory_table_ID.html  Directory_table_ID_W.html  Directory_table_IM.html  Directory_table_M.html  Directory_table_MI.html  Directory_table_M_DRD.html  Directory_table_M_DRDI.html  Directory_table_M_DWR.html  Directory_table_M_DWRI.html  L1Cache_action_p_profileHit.html  index.html
Homework3/hw1_out/: config.ini  config.json  stats.txt
Homework3/hw1_ruby_out/: config.ini  config.json  ruby.txt
Parsec/pf_off_blackscholes/: config.ini  system.pc.com_1.device
Parsec/pf_off_bodytrack/: config.ini  system.pc.com_1.device
Parsec/pf_off_canneal/: config.ini  system.pc.com_1.device
Parsec/pf_off_dedup/: config.ini  system.pc.com_1.device
Parsec/pf_off_ferret/: config.ini  system.pc.com_1.device
Parsec/pf_off_fluidanimate/: config.ini  system.pc.com_1.device
Parsec/pf_off_freqmine/: config.ini  system.pc.com_1.device
Parsec/pf_off_streamcluster/: config.ini  system.pc.com_1.device
Parsec/pf_off_swaptions/: config.ini  stats.txt  system.pc.com_1.device
Parsec/pf_off_vips/: ._stats.txt  config.ini  stats.txt  system.pc.com_1.device
Parsec/pf_off_x264/: config.ini  system.pc.com_1.device
Parsec/pf_on_blackscholes/: config.ini  system.pc.com_1.device
Parsec/pf_on_bodytrack/: config.ini  system.pc.com_1.device
Parsec/pf_on_canneal/: config.ini  system.pc.com_1.device
Parsec/pf_on_dedup/: config.ini  system.pc.com_1.device
Parsec/pf_on_ferret/: config.ini  system.pc.com_1.device
Parsec/pf_on_fluidanimate/: config.ini  system.pc.com_1.device
Parsec/pf_on_fluidanimate/fs/proc/: cpuinfo
Parsec/pf_on_freqmine/: config.ini  system.pc.com_1.device
Parsec/pf_on_streamcluster/: config.ini  stats.txt  system.pc.com_1.device
Parsec/pf_on_swaptions/: config.ini  system.pc.com_1.device
Parsec/pf_on_vips/: config.ini  stats.txt
Parsec/pf_on_x264/: config.ini  system.pc.com_1.device
Parsec/utils/: .run_benchmark.sh.swp  graph.py  run_benchmark.sh
